[package]
name = "netctl2iwd"
version = "0.1.2"
authors = ["Bert Peters <bert@bertptrs.nl>"]
edition = "2018"
description = "Convert netctl profiles to iwd configurations."
keywords = ["netctl", "wireless", "iwd"]
license = "MIT"
repository = "https://github.com/bertptrs/netctl2iwd"
readme = "README.md"

[dependencies]
sha-1 = "0.8.1"
hmac = "0.7.0"
pbkdf2 = { version = "0.3.0", default-features = false }
hex = "0.3.2"
rust-ini = "0.13.0"
clap = "2.32.0"

[badges]

travis-ci = { repository = "bertptrs/netctl2iwd", branch = "master" }
maintenance = { status = "passively-maintained" }
